feat(i18n): 完善后端国际化支持与工作流节点优化
- 补充并对齐后端 i18n 资源文件 (en_US, zh_CN)
- 重构 Controller 层（文档、问题、工作流等）使其支持国际化错误消息
- 优化枚举类及业务对象 (BO) 的属性定义
- 增强工作流引擎执行器及数据库查询/SQL 生成节点的功能

--- a/ruoyi-admin/src/main/resources/i18n/messages_en_US.properties
+++ b/ruoyi-admin/src/main/resources/i18n/messages_en_US.properties
@@ -1,57 +1,246 @@
-#错误消息
+
+# NOT
 not.null=* Required fill in
+
+# USER.JCAPTCHA
 user.jcaptcha.error=Captcha error
 user.jcaptcha.expire=Captcha invalid
+
+# USER.NOT
 user.not.exists=Sorry, your account: {0} does not exist
+
+# USER.PASSWORD
 user.password.not.match=User does not exist/Password error
 user.password.retry.limit.count=Password input error {0} times
 user.password.retry.limit.exceed=Password input error {0} times, account locked for {1} minutes
 user.password.delete=Sorry, your account：{0} has been deleted
+
+# USER
 user.blocked=Sorry, your account: {0} has been disabled. Please contact the administrator
+
+# ROLE
 role.blocked=Role disabled，please contact administrators
+
+# USER.LOGOUT
 user.logout.success=Exit successful
+
+# LENGTH.NOT
 length.not.valid=The length must be between {min} and {max} characters
+
+# USER.USERNAME
 user.username.not.blank=Username cannot be blank
 user.username.not.valid=* 2 to 20 chinese characters, letters, numbers or underscores, and must start with a non number
 user.username.length.valid=Account length must be between {min} and {max} characters
+
+# USER.PASSWORD
 user.password.not.blank=Password cannot be empty
 user.password.length.valid=Password length must be between {min} and {max} characters
 user.password.not.valid=* 5-50 characters
 user.password.format.valid=Password must contain uppercase, lowercase, digit, and special character
+
+# USER.EMAIL
 user.email.not.valid=Mailbox format error
 user.email.not.blank=Mailbox cannot be blank
+
+# USER.PHONENUMBER
 user.phonenumber.not.blank=Phone number cannot be blank
+
+# USER.MOBILE
 user.mobile.phone.number.not.valid=Phone number format error
+
+# USER.LOGIN
 user.login.success=Login successful
+
+# USER.REGISTER
 user.register.success=Register successful
 user.register.save.error=Failed to save user {0}, The registered account already exists
 user.register.error=Register failed, please contact system administrator
+
+# USER
 user.notfound=Please login again
 user.forcelogout=The administrator is forced to exit，please login again
+
+# USER.UNKNOWN
 user.unknown.error=Unknown error, please login again
+
+# AUTH.GRANT
 auth.grant.type.error=Auth grant type error
 auth.grant.type.blocked=Auth grant type disabled
 auth.grant.type.not.blank=Auth grant type cannot be blank
+
+# AUTH.CLIENTID
 auth.clientid.not.blank=Auth clientid cannot be blank
-##文件上传消息
+
+# UPLOAD.EXCEED
 upload.exceed.maxSize=The uploaded file size exceeds the limit file size！<br/>the maximum allowed file size is：{0}MB！
+
+# UPLOAD.FILENAME
 upload.filename.exceed.length=The maximum length of uploaded file name is {0} characters
-##权限
+
+# NO
 no.permission=You do not have permission to the data，please contact your administrator to add permissions [{0}]
+
+# NO.CREATE
 no.create.permission=You do not have permission to create data，please contact your administrator to add permissions [{0}]
+
+# NO.UPDATE
 no.update.permission=You do not have permission to modify data，please contact your administrator to add permissions [{0}]
+
+# NO.DELETE
 no.delete.permission=You do not have permission to delete data，please contact your administrator to add permissions [{0}]
+
+# NO.EXPORT
 no.export.permission=You do not have permission to export data，please contact your administrator to add permissions [{0}]
+
+# NO.VIEW
 no.view.permission=You do not have permission to view data，please contact your administrator to add permissions [{0}]
+
+# REPEAT.SUBMIT
 repeat.submit.message=Repeat submit is not allowed, please try again later
+
+# RATE.LIMITER
 rate.limiter.message=Visit too frequently, please try again later
+
+# SMS.CODE
 sms.code.not.blank=Sms code cannot be blank
 sms.code.retry.limit.count=Sms code input error {0} times
 sms.code.retry.limit.exceed=Sms code input error {0} times, account locked for {1} minutes
+
+# EMAIL.CODE
 email.code.not.blank=Email code cannot be blank
 email.code.retry.limit.count=Email code input error {0} times
 email.code.retry.limit.exceed=Email code input error {0} times, account locked for {1} minutes
+
+# XCX.CODE
 xcx.code.not.blank=Mini program [code] cannot be blank
+
+# SOCIAL.SOURCE
 social.source.not.blank=Social login platform [source] cannot be blank
+
+# SOCIAL.CODE
 social.code.not.blank=Social login platform [code] cannot be blank
+
+# SOCIAL.STATE
 social.state.not.blank=Social login platform [state] cannot be blank
+
+# AI.MSG
+ai.msg.common.params_incomplete=Incomplete parameters
+ai.msg.auth.token_missing=Access denied: Token missing
+
+# AI.ENUM
+ai.enum.status.failed=Failed
+ai.enum.node.start=Start
+
+# AI.MSG
+ai.msg.common.success=Operation successful
+ai.msg.workflow.no_end_node=Workflow must contain an END node
+ai.msg.auth.invalid_token=Invalid Token
+ai.msg.model.builtin_readonly=System builtin models are read-only
+ai.msg.app.name_too_long=App name cannot exceed 64 characters
+
+# AI.ENUM
+ai.enum.app_type.custom_workflow=Custom Workflow
+
+# AI.MSG
+ai.msg.auth.invalid_app_token=Invalid App Token
+
+# AI.ENUM
+ai.enum.model_type.llm=Large Language Model
+
+# AI.MSG
+ai.msg.datasource.not_found_with_id=Data source does not exist: 
+
+# AI.ENTITY
+ai.entity.document.untitled=Untitled Document
+
+# AI.MSG
+ai.msg.app.id_required=App ID is required
+
+# AI.ENUM
+ai.enum.status.running=Running
+
+# AI.MSG
+ai.msg.workflow.multiple_end_nodes=Workflow can only have one END node
+ai.msg.app.not_found=App does not exist
+ai.msg.auth.invalid_token_short=[TODO] 无效的 Token
+ai.msg.workflow.end_node_has_edge=END node cannot have outgoing edges
+ai.msg.datasource.not_found=Data source does not exist
+
+# AI.ENTITY
+ai.entity.document.generic=Generic File
+
+# AI.MSG
+ai.msg.app.name_required=App name is required
+ai.msg.auth.token_not_found=Token does not exist or has been deleted
+ai.msg.workflow.invalid_config=Invalid workflow configuration
+ai.msg.app.desc_too_long=App description cannot exceed 500 characters
+
+# AI.ENUM
+ai.enum.status.completed=Completed
+
+# AI.MSG
+ai.msg.auth.access_denied_token=Access denied: Invalid Token
+
+# AI.ENUM
+ai.enum.node.end=End
+
+# AI.MSG
+ai.msg.model.not_found_with_id=Model does not exist: 
+ai.msg.common.demo_restriction=Demo environment, sensitive operations not allowed
+ai.msg.datasource.meta_missing=Data source has no metadata, please add table structures first
+ai.msg.model.config_empty=Model configuration or provider identifier is empty
+ai.msg.common.id_required=ID is required
+ai.msg.app.id_or_dsl_required=App ID or DSL data is required
+
+# AI.VAL
+ai.val.auth.app_token_required=appToken is required
+
+# AI.MSG
+ai.msg.workflow.no_changes=No changes in workflow configuration, no need to publish
+
+# AI.VAL
+ai.val.dataset.id_required=Dataset ID is required
+ai.val.dataset.name_required=Dataset name is required
+ai.val.common.content_required=Content is required
+ai.val.chunk.content_required=Chunk content is required
+ai.val.chunk.strategy_required=Chunking strategy is required
+ai.val.chunk.list_required=Chunk list is required
+
+# AI.MSG
+ai.msg.model.not_found=Model does not exist
+
+# AI.VAL
+ai.val.model.id_required=Model ID is required
+
+# AI.ENUM
+ai.enum.app_type.fixed_template=Fixed Template
+ai.enum.status.success=Success
+
+# AI.VAL
+ai.val.common.role_required=Role is required
+ai.val.node.type_required=Node type is required
+ai.val.node.name_required=Node name is required
+ai.val.node.id_required=Node ID is required
+ai.val.node.category_required=Node category is required
+ai.val.file.temp_id_list_required=Temporary file ID list is required
+ai.val.file.temp_id_required=Temporary file ID is required
+ai.val.chat.session_title_required=Session title is required
+ai.val.chat.session_title_too_long=Session title cannot exceed 200 characters
+ai.val.chat.session_id_required=Session ID is required
+ai.val.chat.message_content_required=Message content is required
+ai.val.qa.question_id_required=Question ID is required
+ai.val.common.instance_id_required=Instance ID is required
+ai.val.chunk.id_required=Chunk ID is required
+ai.val.kb.id_required=Knowledge base ID is required
+ai.val.kb.name_required=Knowledge base name is required
+ai.val.url.list_required=URL list is required
+ai.val.url.required=URL is required
+ai.val.provider.id_required=Provider ID is required
+ai.val.common.pk_required=Primary key is required
+ai.val.common.name_required=Name is required
+ai.val.document.id_required=Document ID is required
+ai.val.common.title_required=Title is required
+ai.val.template.name_required=Template name is required
+ai.val.template.code_required=Template code is required
+ai.val.template.id_required=Template ID is required
+ai.val.auth.token_name_required=Token name is required
