--- a/ruoyi-admin/src/main/resources/i18n/messages_zh_CN.properties
+++ b/ruoyi-admin/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,57 +1,246 @@
-#错误消息
+
+# NOT
 not.null=* 必须填写
+
+# USER.JCAPTCHA
 user.jcaptcha.error=验证码错误
 user.jcaptcha.expire=验证码已失效
+
+# USER.NOT
 user.not.exists=对不起, 您的账号：{0} 不存在.
+
+# USER.PASSWORD
 user.password.not.match=用户不存在/密码错误
 user.password.retry.limit.count=密码输入错误{0}次
 user.password.retry.limit.exceed=密码输入错误{0}次，帐户锁定{1}分钟
 user.password.delete=对不起，您的账号：{0} 已被删除
+
+# USER
 user.blocked=对不起，您的账号：{0} 已禁用，请联系管理员
+
+# ROLE
 role.blocked=角色已封禁，请联系管理员
+
+# USER.LOGOUT
 user.logout.success=退出成功
+
+# LENGTH.NOT
 length.not.valid=长度必须在{min}到{max}个字符之间
+
+# USER.USERNAME
 user.username.not.blank=用户名不能为空
 user.username.not.valid=* 2到20个汉字、字母、数字或下划线组成，且必须以非数字开头
 user.username.length.valid=账户长度必须在{min}到{max}个字符之间
+
+# USER.PASSWORD
 user.password.not.blank=用户密码不能为空
 user.password.length.valid=用户密码长度必须在{min}到{max}个字符之间
 user.password.not.valid=* 5-50个字符
 user.password.format.valid=密码必须包含大写字母、小写字母、数字和特殊字符
+
+# USER.EMAIL
 user.email.not.valid=邮箱格式错误
 user.email.not.blank=邮箱不能为空
+
+# USER.PHONENUMBER
 user.phonenumber.not.blank=用户手机号不能为空
+
+# USER.MOBILE
 user.mobile.phone.number.not.valid=手机号格式错误
+
+# USER.LOGIN
 user.login.success=登录成功
+
+# USER.REGISTER
 user.register.success=注册成功
 user.register.save.error=保存用户 {0} 失败，注册账号已存在
 user.register.error=注册失败，请联系系统管理人员
+
+# USER
 user.notfound=请重新登录
 user.forcelogout=管理员强制退出，请重新登录
+
+# USER.UNKNOWN
 user.unknown.error=未知错误，请重新登录
+
+# AUTH.GRANT
 auth.grant.type.error=认证权限类型错误
 auth.grant.type.blocked=认证权限类型已禁用
 auth.grant.type.not.blank=认证权限类型不能为空
+
+# AUTH.CLIENTID
 auth.clientid.not.blank=认证客户端id不能为空
-##文件上传消息
+
+# UPLOAD.EXCEED
 upload.exceed.maxSize=上传的文件大小超出限制的文件大小！<br/>允许的文件最大大小是：{0}MB！
+
+# UPLOAD.FILENAME
 upload.filename.exceed.length=上传的文件名最长{0}个字符
-##权限
+
+# NO
 no.permission=您没有数据的权限，请联系管理员添加权限 [{0}]
+
+# NO.CREATE
 no.create.permission=您没有创建数据的权限，请联系管理员添加权限 [{0}]
+
+# NO.UPDATE
 no.update.permission=您没有修改数据的权限，请联系管理员添加权限 [{0}]
+
+# NO.DELETE
 no.delete.permission=您没有删除数据的权限，请联系管理员添加权限 [{0}]
+
+# NO.EXPORT
 no.export.permission=您没有导出数据的权限，请联系管理员添加权限 [{0}]
+
+# NO.VIEW
 no.view.permission=您没有查看数据的权限，请联系管理员添加权限 [{0}]
+
+# REPEAT.SUBMIT
 repeat.submit.message=不允许重复提交，请稍候再试
+
+# RATE.LIMITER
 rate.limiter.message=访问过于频繁，请稍候再试
+
+# SMS.CODE
 sms.code.not.blank=短信验证码不能为空
 sms.code.retry.limit.count=短信验证码输入错误{0}次
 sms.code.retry.limit.exceed=短信验证码输入错误{0}次，帐户锁定{1}分钟
+
+# EMAIL.CODE
 email.code.not.blank=邮箱验证码不能为空
 email.code.retry.limit.count=邮箱验证码输入错误{0}次
 email.code.retry.limit.exceed=邮箱验证码输入错误{0}次，帐户锁定{1}分钟
+
+# XCX.CODE
 xcx.code.not.blank=小程序[code]不能为空
+
+# SOCIAL.SOURCE
 social.source.not.blank=第三方登录平台[source]不能为空
+
+# SOCIAL.CODE
 social.code.not.blank=第三方登录平台[code]不能为空
+
+# SOCIAL.STATE
 social.state.not.blank=第三方登录平台[state]不能为空
+
+# AI.MSG
+ai.msg.common.params_incomplete=参数不完整
+ai.msg.auth.token_missing=访问受限：未提供 Token
+
+# AI.ENUM
+ai.enum.status.failed=执行失败
+ai.enum.node.start=开始
+
+# AI.MSG
+ai.msg.common.success=操作成功
+ai.msg.workflow.no_end_node=工作流必须包含一个 END 节点
+ai.msg.auth.invalid_token=无效的Token
+ai.msg.model.builtin_readonly=系统内置模型不允许修改
+ai.msg.app.name_too_long=应用名称长度不能超过64个字符
+
+# AI.ENUM
+ai.enum.app_type.custom_workflow=自定义工作流
+
+# AI.MSG
+ai.msg.auth.invalid_app_token=无效的应用Token
+
+# AI.ENUM
+ai.enum.model_type.llm=语言模型
+
+# AI.MSG
+ai.msg.datasource.not_found_with_id=数据源不存在: 
+
+# AI.ENTITY
+ai.entity.document.untitled=未命名文档
+
+# AI.MSG
+ai.msg.app.id_required=AppID 不能为空
+
+# AI.ENUM
+ai.enum.status.running=运行中
+
+# AI.MSG
+ai.msg.workflow.multiple_end_nodes=工作流只能有一个 END 节点
+ai.msg.app.not_found=应用不存在
+ai.msg.auth.invalid_token_short=无效的 Token
+ai.msg.workflow.end_node_has_edge=END 节点不能有出边
+ai.msg.datasource.not_found=数据源不存在
+
+# AI.ENTITY
+ai.entity.document.generic=通用文件
+
+# AI.MSG
+ai.msg.app.name_required=应用名称不能为空
+ai.msg.auth.token_not_found=Token不存在或已删除
+ai.msg.workflow.invalid_config=工作流配置无效
+ai.msg.app.desc_too_long=应用描述长度不能超过500个字符
+
+# AI.ENUM
+ai.enum.status.completed=执行完成
+
+# AI.MSG
+ai.msg.auth.access_denied_token=访问受限：无效的 Token
+
+# AI.ENUM
+ai.enum.node.end=结束
+
+# AI.MSG
+ai.msg.model.not_found_with_id=模型不存在: 
+ai.msg.common.demo_restriction=演示环境，不允许操作敏感数据！
+ai.msg.datasource.meta_missing=数据源没有配置元数据，请先添加表结构信息
+ai.msg.model.config_empty=模型配置或供应商标识为空
+ai.msg.common.id_required=ID不能为空
+ai.msg.app.id_or_dsl_required=AppID 或 DSL 数据不能为空
+
+# AI.VAL
+ai.val.auth.app_token_required=appToken 不能为空
+
+# AI.MSG
+ai.msg.workflow.no_changes=工作流配置无变更,无需发布
+
+# AI.VAL
+ai.val.dataset.id_required=数据集ID不能为空
+ai.val.dataset.name_required=数据集名称不能为空
+ai.val.common.content_required=内容不能为空
+ai.val.chunk.content_required=分块内容不能为空
+ai.val.chunk.strategy_required=分块策略不能为空
+ai.val.chunk.list_required=分块列表不能为空
+
+# AI.MSG
+ai.msg.model.not_found=模型不存在
+
+# AI.VAL
+ai.val.model.id_required=模型ID不能为空
+
+# AI.ENUM
+ai.enum.app_type.fixed_template=固定模板
+ai.enum.status.success=执行成功
+
+# AI.VAL
+ai.val.common.role_required=角色不能为空
+ai.val.node.type_required=节点类型不能为空
+ai.val.node.name_required=节点名称不能为空
+ai.val.node.id_required=节点ID不能为空
+ai.val.node.category_required=节点分类不能为空
+ai.val.file.temp_id_list_required=临时文件ID列表不能为空
+ai.val.file.temp_id_required=临时文件ID不能为空
+ai.val.chat.session_title_required=会话标题不能为空
+ai.val.chat.session_title_too_long=会话标题长度不能超过200个字符
+ai.val.chat.session_id_required=会话ID不能为空
+ai.val.chat.message_content_required=消息内容不能为空
+ai.val.qa.question_id_required=问题ID不能为空
+ai.val.common.instance_id_required=实例ID不能为空
+ai.val.chunk.id_required=切片ID不能为空
+ai.val.kb.id_required=知识库ID不能为空
+ai.val.kb.name_required=知识库名称不能为空
+ai.val.url.list_required=URL列表不能为空
+ai.val.url.required=URL不能为空
+ai.val.provider.id_required=供应商ID不能为空
+ai.val.common.pk_required=主键不能为空
+ai.val.common.name_required=名称不能为空
+ai.val.document.id_required=文档ID不能为空
+ai.val.common.title_required=标题不能为空
+ai.val.template.name_required=模板名称不能为空
+ai.val.template.code_required=模板编码不能为空
+ai.val.template.id_required=模板ID不能为空
+ai.val.auth.token_name_required=Token名称不能为空
